ファイルの統合・minify化・その他
他ブラウザ及び過去ブラウザの対応は保留
リトライ後にメッセージ履歴を残すように修正
v0.100に変更

--- a/debug.html
+++ b/debug.html
@@ -193,7 +193,7 @@
 	</nav>
 
 	<div class="modal-container" id ="link-system">
-		<div class="modal-overlay"></div>
+		<div class="modal-overlay"><span class="modal-close">×</span></div>
 		<article class="modal-content">
 			<h1>システム</h1>
 			<section>
@@ -267,7 +267,7 @@
 	</div>
 	
 	<div class="modal-container" id ="link-command">
-		<div class="modal-overlay"></div>
+		<div class="modal-overlay"><span class="modal-close">×</span></div>
 		<article class="modal-content" id="site-command-container">
 			<h1>コマンド一覧</h1>
 			<ul>
@@ -328,7 +328,7 @@
 	</div>
 	
 	<div class="modal-container" id ="link-recipe">
-		<div class="modal-overlay"></div>
+		<div class="modal-overlay"><span class="modal-close">×</span></div>
 		<article class="modal-content" id="site-recipe-container">
 			<h1>レシピ一覧</h1>
 			<ul>
@@ -349,7 +349,7 @@
 	</div>
 	
 	<div class="modal-container" id ="link-about">
-		<div class="modal-overlay"></div>
+		<div class="modal-overlay"><span class="modal-close">×</span></div>
 		<article class="modal-content">
 			<h1 class="title">Death and Birth</h1>
 			<ul>
@@ -359,17 +359,16 @@
 				<li><p>開発・音楽:&ensp;<a href="https://ringil-music.com" target="_blank">Ringil</a></p></li>
 				<li><p>更新内容:&ensp;<a href="https://ringil-blog.info/" target="_blank">Blog</a></p></li>
 			</ul>
+			<p class="page-back"><a href="../">前ページに戻る</a></p>
 			<footer><p>(c) Death and Birth 2019</p></footer>
 		</article>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	<script src="site.js"></script>
-	
 	<!-- 開発バージョン-->
 	<script src="vendor/js/vue.js"></script>
-
+	<script src="site.js"></script>
 	<script src="scripts/constants.js"></script>
 	<script src="scripts/color.js"></script>
 	<script src="scripts/display.js"></script>
