アップデートの告知

--- a/game/index.html
+++ b/game/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 	<main>
+		<small style="color: yellow">※7/28にセーブデータの互換性のないアップデートを行います。アップデート後は新規データから始まります。</small>
 		<div id="canvas-container">
 			<span id="msg-err">※ お使いのブラウザではこのゲームは動作しません。chromeの最新版を推奨します。</span>
 			<canvas id="canvas-main"></canvas>
