--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <title>Top | Death and Birth β</title>
   <meta name="description" content="デスアンドバースはダンテの神曲とギリシャ神話を題材にした、PCブラウザで遊べる開発中のローグライクゲーム。">
 
-  <link href="https://fonts.googleapis.com/css?family=Stardos+Stencil" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Stardos+Stencil&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
   
    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -62,6 +62,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#spec">spec</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-play" href="game/index.html">play</a>
         </li>
       </ul>
     </div>
@@ -260,10 +263,11 @@
         <div class="spec-box">
           <div class="text-box order-md-2 animated">
             <ul class="spec-list">
-              <li><span>タイトル</span><span> : デスアンドバース β版</span></li>
-              <li><span>ジャンル</span><span> : ローグライク</span></li>
-              <li><span>対応機種</span><span> : PCブラウザ</span></li>
-              <li><span>対応ブラウザ</span><span> : Chrome 最新版</span></li>
+              <li><span>タイトル</span><span>:&ensp;デスアンドバース β版</span></li>
+              <li><span>ジャンル</span><span>:&ensp;ローグライク</span></li>
+              <li><span>対応機種</span><span>:&ensp;PCブラウザ</span></li>
+              <li><span>対応ブラウザ</span><span>:&ensp;Chrome 最新版</span></li>
+              <li><span>開発・音楽</span><span>:&ensp;<a href="https://ringil-music.com/" target="_blank">Ringil</a></span></li>
             </ul>
           </div>
           <div class="link-box orde-md-1 animated">
@@ -277,7 +281,7 @@
       <div class="nav-back-box">
         <a class="nav-back" href="#header">Top</a>
       </div>
-      <p class="copyright">&copy; Death and Birth All Rights Reserved. <br class="sp">Composed by <a href="https://ringil-music.com/" target="_blank">Ringil</a>.</p>
+      <p class="copyright">&copy; Death and Birth All Rights Reserved.&ensp;<br class="sp">Privacy Policy <a href="https://www.google.com/intl/ja/policies/privacy/partners/">Google</a>.</p>
     </footer>
   </div><!-- bg-container -->
 
@@ -286,6 +290,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
   <script src="js/jquery.inview.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 </html>
