Google Fontsにfont-displayを適用
README.mdの画像を差し替え

--- a/debug.html
+++ b/debug.html
@@ -6,7 +6,7 @@
 	<title>Death and Birth | デスアンドバース</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/game.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Stardos+Stencil" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Stardos+Stencil&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="game-container">
