--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Death and Birth | デスアンドバース</title>
 	<link href="css/main.min.css" rel="stylesheet">
 	<link href="css/game.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Stardos+Stencil" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Stardos+Stencil&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="game-container">
