記事内URLの変更

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 				<li><p>対応ブラウザ:&ensp;<a href="https://www.google.co.jp/chrome" target="_blank">Chrome 最新版</a></p></li>
 				<li><p>ソースコード:&ensp;<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p></li>
 				<li><p>開発・音楽:&ensp;<a href="https://ringil-music.com" target="_blank">Ringil</a></p></li>
-				<li><p>更新内容:&ensp;<a href="https://ringil-blog.info/" target="_blank">Blog</a></p></li>
+				<li><p>更新内容:&ensp;<a href="https://blog.ringil-music.com/" target="_blank">Blog</a></p></li>
 			</ul>
 			<p class="page-back"><a href="../">前ページに戻る</a></p>
 			<footer><p>(c) Death and Birth 2019</p></footer>
